Project structure changed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.SignUpActivity"></activity>
-        <activity android:name=".activity.LoginActivity" />
-        <activity android:name=".activity.MainActivity">
+        <activity android:name=".activity.userActivity.UserProfileActivity"></activity>
+        <activity android:name=".activity.userActivity.SignUpActivity" />
+        <activity android:name=".activity.userActivity.LoginActivity" />
+        <activity android:name=".activity.userActivity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
