--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.userActivity.QuestionActivity"></activity>
+        <activity android:name=".activity.userActivity.CovidQuestionnaireRedirection"></activity>
+        <activity android:name=".activity.userActivity.QuestionActivity" />
         <activity
             android:name=".activity.userActivity.OnBoarding"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
