--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.covid_management_android">
     <!-- Internet Permission -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -13,10 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity
-            android:name=".activity.userActivity.CovidQuestionnaireRedirection"
-           >
-        </activity>
+        <activity android:name=".activity.userActivity.HospitalList"></activity>
+        <activity android:name=".activity.userActivity.CovidQuestionnaireRedirection"></activity>
         <activity android:name=".activity.userActivity.QuestionActivity" />
         <activity
             android:name=".activity.userActivity.OnBoarding"
