--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.karumi:dexter:6.2.1'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
     testImplementation 'junit:junit:4.12'
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
     implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
