Country wise Covid Statistics added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-
+        <activity android:name=".activity.userActivity.NationalCovidStats"></activity>
         <activity android:name=".activity.appointments.AppointmentBookingActivity" />
         <activity android:name=".activity.userActivity.HospitalList" />
         <activity android:name=".activity.userActivity.CovidQuestionnaireRedirection" />
