--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'com.leo.simplearcloader:simplearcloader:1.0.+'
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
     implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
+    implementation 'com.kofigyan.stateprogressbar:stateprogressbar:1.0.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
